# file-organiser

./: Cargo.toml  README.md
screenshots/: file-org-1.afphoto
src/: args.rs  criteria.rs  main.rs  manage.rs  matches.rs  path_info.rs  resource_row.rs  run.rs  start.rs  utils.rs
