[package]
name = "smartmove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
clap = { version = "4.0.32", features = ["derive", "cargo"] }
cmd_lib = "1.3.0"
walkdir = "2"
chrono = "0.4"
color-print = "0.3.4"
size = "0.4.1"
regex = "1.7.1"